--- a/inst/diapoML/plan presentation.html
+++ b/inst/diapoML/plan presentation.html
@@ -177,7 +177,11 @@ Attaching package: 'dplyr'</code></pre>
 </div>
 <section id="page-de-garde-introduction-au-machine-learning" class="level2">
 <h2 class="anchored" data-anchor-id="page-de-garde-introduction-au-machine-learning">PAGE DE GARDE : Introduction au machine learning</h2>
-<p>Images : logo du CEFIL</p>
+<div class="quarto-figure quarto-figure-left">
+<figure class="figure">
+<p><img src="logo_cefil_new.jpg" class="img-fluid quarto-figure quarto-figure-left figure-img"></p>
+</figure>
+</div>
 </section>
 <section id="diapo-1-cest-quoi-le-machine-learning" class="level2">
 <h2 class="anchored" data-anchor-id="diapo-1-cest-quoi-le-machine-learning">Diapo 1 : c’est quoi le machine learning ?</h2>
@@ -190,11 +194,13 @@ Attaching package: 'dplyr'</code></pre>
 </section>
 <section id="diapo-2-apprentissage-supervisé-vs-non-supervisé" class="level2">
 <h2 class="anchored" data-anchor-id="diapo-2-apprentissage-supervisé-vs-non-supervisé">Diapo 2 : apprentissage supervisé vs non supervisé</h2>
+<p>Trois principales manières pour la machine d’apprendre, avec ou sans étiquette dans les données qu’on lui fournit :</p>
 <ol type="1">
-<li><p>l’apprentissage supervisé</p></li>
-<li><p>l’apprentissage non supervisé</p></li>
+<li><p>l’apprentissage supervisé (avec étiquette)</p></li>
+<li><p>l’apprentissage non supervisé (sans étiquette)</p></li>
+<li><p>l’apprentissage par essai/erreur</p></li>
 </ol>
-<p>En apprentissage automatique supervisé, on cherche à trouver le meilleur algorithme avec les meilleurs paramètres permettant de prédire une variable <strong>quantitative</strong> ou <strong>qualitative</strong> à partir de variables quantitatives ou qualitatives. La variable à prédire s’appelle “l’étiquette” ou la “target”, et on la note Y. Les variables explicatives sont parfois appelées les <strong>features</strong>.</p>
+<p>En apprentissage automatique supervisé, on cherche donc à trouver le meilleur algorithme avec les meilleurs paramètres permettant de prédire une variable <strong>quantitative</strong> ou <strong>qualitative</strong> à partir de variables quantitatives ou qualitatives. La variable à prédire s’appelle la variable cible. On parle encore d’étiquette ou de target, et on la note Y. Les variables explicatives sont parfois appelées les <strong>features</strong>.</p>
 <p>En apprentissage automatique non supervisé, il n’y a pas d’étiquettes (pas de Y à prédire), donc l’objectif est d’identifier les individus qui se ressemblent le plus et faire des groupes les plus homogènes possibles.</p>
 <p>On ne verra dans ce TD que l’apprentissage supervisé.</p>
 </section>
@@ -405,12 +411,29 @@ Y = 416,5 + 10,6 X
 </section>
 <section id="diapo-5-complexité-du-modèle-et-estimations" class="level2">
 <h2 class="anchored" data-anchor-id="diapo-5-complexité-du-modèle-et-estimations">Diapo 5 : Complexité du modèle et estimations</h2>
-<p>Plus un modèle est complexe, mieux il estime. On l’a vu avec la regression linéaire : plus on rajoute de variables, mieux il estime. On voit notamment que le R2 (coefficient de détermination) se rapproche de plus en plus de 1.</p>
-<p>On dit qu’il colle de plus en plus aux données.</p>
+<p>Plus un modèle est complexe, mieux il estime. On l’a vu avec la regression linéaire : plus on rajoute de variables, mieux il estime. Le R2 (coefficient de détermination) se rapproche de plus en plus de 1. On dit qu’il colle de plus en plus aux données. Mais si le modèle est trop simple, il ne prédit pas correctement : on dit qu’il sous-apprend.</p>
+<div class="tabset-margin-container"></div><div class="panel-tabset">
+<ul class="nav nav-tabs" role="tablist"><li class="nav-item" role="presentation"><a class="nav-link active" id="tabset-2-1-tab" data-bs-toggle="tab" data-bs-target="#tabset-2-1" role="tab" aria-controls="tabset-2-1" aria-selected="true" href="">Sous-Apprentissage</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-2-2-tab" data-bs-toggle="tab" data-bs-target="#tabset-2-2" role="tab" aria-controls="tabset-2-2" aria-selected="false" href="">Sur-apprentissage</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-2-3-tab" data-bs-toggle="tab" data-bs-target="#tabset-2-3" role="tab" aria-controls="tabset-2-3" aria-selected="false" href="">Apprentissage équilibré</a></li></ul>
+<div class="tab-content">
+<div id="tabset-2-1" class="tab-pane active" role="tabpanel" aria-labelledby="tabset-2-1-tab">
+<p><img src="sous_apprentissage.png" class="img-fluid"></p>
+</div>
+<div id="tabset-2-2" class="tab-pane" role="tabpanel" aria-labelledby="tabset-2-2-tab">
+<p><img src="sur-apprentissage.png" class="img-fluid"></p>
+</div>
+<div id="tabset-2-3" class="tab-pane" role="tabpanel" aria-labelledby="tabset-2-3-tab">
+<p><img src="apprentissage_adapté.png" class="img-fluid"></p>
+</div>
+</div>
+</div>
+<p>Cet exemple est tiré d’une formation OpenClassrooms <span class="citation" data-cites="classrooms1">(<a href="#ref-classrooms1" role="doc-biblioref">Azencott 2024</a>)</span>.</p>
 
 </section>
 
 <div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">References</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
+<div id="ref-classrooms1" class="csl-entry" role="listitem">
+Azencott, Chloé-Agathe. 2024. <span>“Evaluez Les Performances d’un Modèle de Machine Learning.”</span> 2024. <a href="https://openclassrooms.com/fr/courses/4297211-evaluez-les-performances-dun-modele-de-machine-learning/4297218-comprenez-ce-qui-fait-un-bon-modele-d-apprentissage">https://openclassrooms.com/fr/courses/4297211-evaluez-les-performances-dun-modele-de-machine-learning/4297218-comprenez-ce-qui-fait-un-bon-modele-d-apprentissage</a>.
+</div>
 <div id="ref-Cun2019" class="csl-entry" role="listitem">
 Le Cun, Yann. 2019. <em>Quand La Machine Apprend</em>. 1ère ed. Odile Jacob.
 </div>
